@@ -1,4 +1,4 @@
-.\" RCSid "$Id: total.1,v 1.3 2004/01/01 19:31:45 greg Exp $"
+.\" RCSid "$Id: total.1,v 1.4 2005/06/02 04:47:26 greg Exp $"
 .TH TOTAL 1 2/3/95 RADIANCE
 .SH NAME
 total - sum up columns
@@ -14,6 +14,10 @@ total - sum up columns
 .B \-u
 |
 .B \-l
+][
+.B \-i{f|d}[N]
+][
+.B \-o{f|d}
 ][
 .B \-tC
 ][
@@ -63,6 +67,23 @@ For sums, the arithmetic mean is computed.
 For products, the geometric mean is computed.
 (A logarithmic sum of absolute values is used to avoid overflow, and 
 zero values are silently ignored.)
+.PP
+If the input data is binary, the
+.I \-id
+or
+.I \-if
+option may be given for 64-bit double or 32-bit float values, respectively.
+Either option may be followed immediately by an optional
+count, which defaults to 1, indicating the number of double or float
+binary values to read per record on the input file.
+(There can be no space between the option and this count.)\0
+Similarly, the
+.I \-od
+and
+.I \-of
+options specify binary double or float output, respectively.
+These options do not need a count, as this will be determined by the
+number of input channels.
 .PP
 A count can be given as the number of lines to read before
 computing a result.
