@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 1.2 2004/01/01 19:31:45 greg Exp $
+# RCSid: $Id: Rmakefile,v 1.3 2005/06/02 04:47:27 greg Exp $
 #
 #  Compiles for icalc, rcalc, ev, and utilities
 #
@@ -55,3 +55,7 @@ histo:	histo.o
 	$(CC) $(CFLAGS) -o histo histo.o $(MLIB)
 
 calc.o ev.o rcalc.o:	../common/calcomp.h
+
+total.o rcalc.o:	../common/platform.h
+
+rcalc.o:	../common/rterror.h ../common/rtmisc.h ../common/rtio.h
